<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_gravity="center"
    android:layout_marginLeft="40dp"
    android:layout_marginStart="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginEnd="40dp"
    android:background="@drawable/round_rectangle_shape_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@drawable/round_rectangle_shape_fg"
        android:layout_margin="2dp">

        <!-- report contents -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/reportText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:textColor="#ffffff"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- spacer to bottom -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        </FrameLayout>

        <!-- bottom buttons -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerInParent="true"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <Button
                        android:id="@+id/editReportButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Edit"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:layout_marginEnd="4dp"
                        android:layout_marginRight="4dp"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <Button
                        android:id="@+id/moveReportButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Move"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:layout_marginEnd="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginStart="2dp"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <Button
                        android:id="@+id/deleteReportButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Delete"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:layout_marginLeft="4dp"
                        android:layout_marginStart="4dp"/>
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>